--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 indicator-transfer-buteo (0.1-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Renato Araujo Oliveira Filho ]
   * Initial package
 
- -- Renato Araujo Oliveira Filho <renato.filho@canonical.com>  Thu, 4 Ago 2015 20:52:19 -0300
+ -- Renato Araujo Oliveira Filho <renato.filho@canonical.com>  Fri, 02 Oct 2015 11:05:45 -0300
