--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+indicator-transfer-buteo (0.3) xenial; urgency=medium
+
+  * Relase on xenial.
+
+ -- Rodney Dawes <dobey@ubports.com>  Fri, 13 Nov 2020 11:04:02 -0500
+
 indicator-transfer-buteo (0.2+ubports) vivid; urgency=medium
 
   * Imported to UBports
